--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ endif()
 # yacc and awk first as they are needed by other targets
 add_subdirectory(src/yacc)
 add_subdirectory(src/awk)
+add_subdirectory(src/sed)
 
 add_subdirectory(src/compile_et)
 add_subdirectory(src/file2c)
