--- a/src/awk/CMakeLists.txt
+++ b/src/awk/CMakeLists.txt
@@ -11,7 +11,6 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/ytab.h" MAIN_DEPENDENCY "
         COMMAND ln -sf "${CMAKE_CURRENT_BINARY_DIR}/y.tab.h" "${CMAKE_CURRENT_BINARY_DIR}/ytab.h" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
 list(APPEND awk_SRCS ${CMAKE_CURRENT_BINARY_DIR}/ytab.c)
-add_crossbuild_executable(awk SOURCE_PATH ${CHERIBSD_DIR}/contrib/one-true-awk SOURCES ${awk_SRCS})
 add_definitions(-DHAS_ISBLANK -DFOPEN_MAX=64)
 
 
@@ -19,3 +18,6 @@ add_definitions(-DHAS_ISBLANK -DFOPEN_MAX=64)
 add_executable(awk-maketab ${CHERIBSD_DIR}/contrib/one-true-awk/maketab.c ${CMAKE_CURRENT_BINARY_DIR}/ytab.h)
 add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/proctab.c" # MAIN_DEPENDENCY "${CMAKE_CURRENT_BINARY_DIR}/y.tab.h"
         COMMAND awk-maketab > "${CMAKE_CURRENT_BINARY_DIR}/proctab.c" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+
+add_crossbuild_executable(awk SOURCE_PATH ${CHERIBSD_DIR}/contrib/one-true-awk SOURCES ${awk_SRCS})
+add_executable(FreeBSD::awk ALIAS awk)
