--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,10 +48,17 @@ target_include_directories(sbuf PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/include)
 
 add_subdirectory(lib/libmd)
 
+function(add_simple_crossbuild_program _name _path) # _other_sources
+    add_crossbuild_executable(${_name} SOURCE_PATH ${CHERIBSD_DIR}/${_path} SOURCES ${ARGN})
+endfunction()
+
 # yacc and awk first as they are needed by other targets
 add_subdirectory(src/yacc)
 add_subdirectory(src/awk)
 add_subdirectory(src/sed)
+
+
+add_simple_crossbuild_program(cat bin/cat cat.c)
 
 add_subdirectory(src/mkdb)
 add_subdirectory(src/compile_et)
