--- a/src/makefs/CMakeLists.txt
+++ b/src/makefs/CMakeLists.txt
@@ -29,6 +29,10 @@ target_include_directories(makefs PRIVATE ${CHERIBSD_DIR}/sys/ufs/ffs)
 target_include_directories(makefs PRIVATE ${CHERIBSD_DIR}/sys/fs/cd9660)
 target_include_directories(makefs PRIVATE ${CHERIBSD_DIR}/contrib/mknod)
 target_include_directories(makefs PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include)
-target_compile_definitions(makefs PRIVATE -DHAVE_STRUCT_STAT_ST_FLAGS=1)
 target_link_libraries(makefs PRIVATE FreeBSD::libnetbsd FreeBSD::libsbuf util FreeBSD::libpwcache)
+if(LINUX)
+    target_compile_definitions(makefs PRIVATE HAVE_STRUCT_STAT_ST_FLAGS=0)
+else()
+    target_compile_definitions(makefs PRIVATE -DHAVE_STRUCT_STAT_ST_FLAGS=1)
+endif()
 
