--- a/src/mtree/CMakeLists.txt
+++ b/src/mtree/CMakeLists.txt
@@ -7,4 +7,6 @@ add_crossbuild_executable(mtree SOURCE_PATH ${CHERIBSD_DIR}/contrib/mtree SOURCE
 target_include_directories(mtree PRIVATE ${CMAKE_SOURCE_DIR}/contrib/libnetbsd ${CMAKE_SOURCE_DIR}/contrib/mknod)
 # TODO: add FreeBSD lib/libmd for the hashes?
 target_link_libraries(mtree PRIVATE FreeBSD::libpwcache FreeBSD::libnetbsd FreeBSD::libmd)
-# target_compile_definitions(mtree PUBLIC -DNO_MD5 -DNO_RMD160 -DNO_SHA1 -DNO_SHA2)
+if(LINUX)
+    target_link_libraries(mtree PRIVATE libc-vis)
+endif()
