Get makefs working on Linux

--- a/src/makefs/CMakeLists.txt
+++ b/src/makefs/CMakeLists.txt
@@ -31,8 +31,6 @@ target_include_directories(makefs PRIVATE ${CHERIBSD_DIR}/contrib/mknod)
 target_include_directories(makefs PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include)
 target_link_libraries(makefs PRIVATE FreeBSD::libnetbsd FreeBSD::libsbuf util FreeBSD::libpwcache)
 if(LINUX)
-    target_compile_definitions(makefs PRIVATE HAVE_STRUCT_STAT_ST_FLAGS=0)
-else()
-    target_compile_definitions(makefs PRIVATE -DHAVE_STRUCT_STAT_ST_FLAGS=1)
+    target_link_libraries(makefs PRIVATE libc-vis)
 endif()
 
