--- a/src/mkdb/CMakeLists.txt
+++ b/src/mkdb/CMakeLists.txt
@@ -9,6 +9,9 @@ file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink "${CHERIBSD_DIR}/include/pwd.h" "pwd.h" WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include")
 execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink "${CHERIBSD_DIR}/include/grp.h" "grp.h" WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include")
 target_include_directories(pwd_mkdb PRIVATE BEFORE ${CMAKE_CURRENT_BINARY_DIR}/include)
+if(APPLE)
+    target_compile_definitions(pwd_mkdb PRIVATE __XSI_VISIBLE=800 __POSIX_VISIBLE=200112 __BSD_VISIBLE=1)
+endif()
 
 add_crossbuild_executable(services_mkdb SOURCE_PATH ${CHERIBSD_DIR}/usr.sbin/services_mkdb SOURCES services_mkdb.c uniq.c)
 target_compile_definitions(services_mkdb PRIVATE _PATH_SERVICES_DB="/var/db/services.db")
