Build freebsd version of find
The -s flag doesn't exist in other find implementations and it is used by
the FreeBSD build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,8 +101,9 @@ install(PROGRAMS $<TARGET_FILE:freebsd-test> DESTINATION bin RENAME "freebsd-[")
 add_simple_crossbuild_program(mktemp usr.bin/mktemp mktemp.c)
 add_subdirectory(src/mkdb)
 add_subdirectory(src/compile_et)
-add_subdirectory(src/grep)
 add_subdirectory(src/file2c)
+add_subdirectory(src/find)
+add_subdirectory(src/grep)
 add_subdirectory(src/config)
 add_subdirectory(src/makefs)
 add_subdirectory(src/mtree)
