--- a/src/find/CMakeLists.txt
+++ b/src/find/CMakeLists.txt
@@ -3,6 +3,9 @@ set(find_SRCS find.c function.c ls.c main.c misc.c operator.c option.c ${CMAKE_C
 add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/y.tab.c" "${CMAKE_CURRENT_BINARY_DIR}/y.tab.h" MAIN_DEPENDENCY ${CHERIBSD_DIR}/usr.bin/find/getdate.y
         COMMAND Bootstrap::yacc -d ${CHERIBSD_DIR}/usr.bin/find/getdate.y
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+if(APPLE)
+    list(APPEND find_SRCS ${CHERIBSD_DIR}/lib/libc/locale/rpmatch.c)
+endif()
 
 # add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/ytab.c" MAIN_DEPENDENCY "${CMAKE_CURRENT_BINARY_DIR}/y.tab.c"
 #         COMMAND ln -sf "${CMAKE_CURRENT_BINARY_DIR}/y.tab.c" "${CMAKE_CURRENT_BINARY_DIR}/ytab.c" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
