--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,8 +86,8 @@ endfunction()
 # yacc and awk first as they are needed by other targets
 add_subdirectory(src/yacc)
 add_subdirectory(src/awk)
-# add_subdirectory(src/lex)
 add_subdirectory(src/sed)
+add_subdirectory(src/lex)
 add_subdirectory(src/expr)
 
 add_simple_crossbuild_program(cat bin/cat cat.c)
