Use CMake to create nbtool_config.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,9 @@ include(FeatureSummary)
 if("${CMAKE_SYSTEM_NAME}" MATCHES "Linux")
     find_package(LibBSD REQUIRED)
     set(LINUX 1)
+    set(CMAKE_REQUIRED_FLAGS "-include ${CMAKE_SOURCE_DIR}/include/linux/pre-include.h")
+elseif(APPLE)
+    set(CMAKE_REQUIRED_FLAGS "-include ${CMAKE_SOURCE_DIR}/include/mac/pre-include.h")
 endif()
 find_package(LibRoken REQUIRED)
 find_package(Threads REQUIRED)
@@ -27,6 +30,34 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 add_compile_options(-Werror=implicit-function-declaration -Werror=implicit-int -Werror=return-type -Werror=undef)
 include_directories(include)
+
+# Config checks:
+#file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
+include_directories(${CMAKE_BINARY_DIR}/include)
+set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
+include(CheckStructHasMember)
+include(CheckIncludeFile)
+include(CheckSymbolExists)
+check_struct_has_member("struct stat" st_flags sys/stat.h HAVE_STRUCT_STAT_ST_FLAGS LANGUAGE C)
+check_struct_has_member("struct stat" st_birthtime sys/stat.h HAVE_STRUCT_STAT_BIRTHTIME LANGUAGE C)
+check_struct_has_member("struct stat" st_mtimensec sys/stat.h HAVE_STRUCT_STAT_ST_MTIMENSEC LANGUAGE C)
+set(STATFS_HEADERS)
+check_include_file(netdb.h HAVE_NETDB_H)
+check_include_file(sys/statfs.h HAVE_SYS_STATFS_H)
+if(HAVE_SYS_STATFS_H)
+    list(APPEND STATFS_HEADERS sys/statfs.h)
+endif()
+check_include_file(mount.h HAVE_MOUNT_H)
+if(HAVE_MOUNT_H)
+    list(APPEND STATFS_HEADERS mount.h)
+endif()
+check_struct_has_member("struct statfs" f_fstypename "${STATFS_HEADERS}" HAVE_STRUCT_STATFS_F_FSTYPENAME LANGUAGE C)
+check_struct_has_member("struct statvfs" f_iosize "sys/statvfs.h" HAVE_STRUCT_STATVFS_F_IOSIZE LANGUAGE C)
+
+check_symbol_exists(fstatvfs sys/statvfs.h HAVE_FSTATVFS)
+check_symbol_exists(pwcache_userdb pwd.h HAVE_PWCACHE_USERDB)
+
+configure_file(nbtool_config.h.cmake ${CMAKE_BINARY_DIR}/include/nbtool_config.h)
 
 
 
