Add uuencode and uudecode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,6 +143,12 @@ add_subdirectory(src/rpcgen)
 add_subdirectory(src/sh)
 add_subdirectory(src/sort)
 add_simple_crossbuild_program(tsort usr.bin/tsort tsort.c)
+add_simple_crossbuild_program(uuencode usr.bin/uuencode uuencode.c)
+add_simple_crossbuild_program(uudecode usr.bin/uudecode uudecode.c)
+if(LINUX)
+target_link_libraries(uuencode PRIVATE resolv)
+target_link_libraries(uudecode PRIVATE resolv)
+endif()
 target_include_directories(tsort PRIVATE ${CHERIBSD_DIR}/contrib/uthash/src)
 
 add_simple_crossbuild_program(unifdef usr.bin/unifdef unifdef.c)
