Fix build on Mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,9 +145,9 @@ add_subdirectory(src/sort)
 add_simple_crossbuild_program(tsort usr.bin/tsort tsort.c)
 add_simple_crossbuild_program(uuencode usr.bin/uuencode uuencode.c)
 add_simple_crossbuild_program(uudecode usr.bin/uudecode uudecode.c)
-if(LINUX)
-target_link_libraries(uuencode PRIVATE resolv)
-target_link_libraries(uudecode PRIVATE resolv)
+if(LINUX OR APPLE)
+    target_link_libraries(uuencode PRIVATE resolv)
+    target_link_libraries(uudecode PRIVATE resolv)
 endif()
 target_include_directories(tsort PRIVATE ${CHERIBSD_DIR}/contrib/uthash/src)
 
