Fix build of lex

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ include_directories(include)
 # Config checks:
 #file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
 include_directories(${CMAKE_BINARY_DIR}/include)
-set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
+set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE=1 -D_DARWIN_C_SOURCE=1)
 include(CheckStructHasMember)
 include(CheckIncludeFile)
 include(CheckSymbolExists)
@@ -47,11 +47,11 @@ check_include_file(sys/statfs.h HAVE_SYS_STATFS_H)
 if(HAVE_SYS_STATFS_H)
     list(APPEND STATFS_HEADERS sys/statfs.h)
 endif()
-check_include_file(mount.h HAVE_MOUNT_H)
-if(HAVE_MOUNT_H)
-    list(APPEND STATFS_HEADERS mount.h)
+check_include_file(sys/mount.h HAVE_SYS_MOUNT_H)
+if(HAVE_SYS_MOUNT_H)
+    list(APPEND STATFS_HEADERS sys/mount.h)
 endif()
-check_struct_has_member("struct statfs" f_fstypename "${STATFS_HEADERS}" HAVE_STRUCT_STATFS_F_FSTYPENAME LANGUAGE C)
+check_struct_has_member("struct statfs" f_fstypename "${STATFS_HEADERS};sys/param.h" HAVE_STRUCT_STATFS_F_FSTYPENAME LANGUAGE C)
 check_struct_has_member("struct statvfs" f_iosize "sys/statvfs.h" HAVE_STRUCT_STATVFS_F_IOSIZE LANGUAGE C)
 
 check_symbol_exists(fstatvfs sys/statvfs.h HAVE_FSTATVFS)
